# Copyright MICRORISC s.r.o.
# SPDX-License-Identifier: Apache-2.0
# File: CMakeLists.txt
# Authors: Ondřej Hujňák <ondrej.hujnak@iqrf.org>
# Date: 2025-04-03
#
# This file is a part of the LIBIQRF. For the full license information, see the
# LICENSE file in the project root.

add_subdirectory(boost-logger)
